--- a/src/app/(home)/styles.module.css
+++ b/src/app/(home)/styles.module.css
@@ -1,4 +1,5 @@
-.container {  display: grid;
+.container {  
+  display: grid;
   grid-template-columns: min-content 1fr min-content;
   grid-template-rows: min-content 1fr repeat(2, min-content);
   gap: 0px 12px;
@@ -10,7 +11,13 @@
     "reply_avatar likes_replies .";
 }
 
-.avatar { grid-area: avatar; }
+.avatar {
+  display: flex;
+  flex-shrink: 0;
+  overflow: hidden;
+  z-index: 0;
+  grid-area: avatar; 
+}
 
 .username { grid-area: username; }
 
@@ -42,16 +49,17 @@
 
 .DialogContent {
   box-shadow: hsla(0, 0%, 15%, 0.726) 0px 10px 38px -10px, hsla(0, 2%, 11%, 0.705) 0px 10px 20px -15px;
-  position: fixed;
+  background: rgba(0, 0, 0, 0.5);
+  position: absolute;
   display: grid;
-  gap: 50px;
-  top: 50%;
+  gap: 30px;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  justify-items: center;
+  top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: max-content;
-  height: 75%;
-  max-width: 450px;
-  max-height: 85vh;
   padding: 25px;
   animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
   z-index: 0;
@@ -62,9 +70,10 @@
 }
 
 .bottomDialog {
-  display: block;
+  display: flex;
   border-radius: 6px;
   box-sizing: border-box;
+  border: 1px solid red;
   color: rgb(243, 245, 247);
   border-color: rgba(243, 245, 247, 0.15);
   position: relative;
@@ -72,15 +81,14 @@
 
 .container2 {
   box-sizing: border-box;
+  box-shadow: 0 12px 24px 0 rgba(0,0,0,.08);
   background-color: rgb(24, 24, 24);
-  border-color: rgba(243, 245, 247, 0.15);
+  border-color: rgba(243, 245, 247, 0.479);
   border-radius: 6px;
-  height: 118px;
   padding: 24px 24px 16px 24px;
   font-size: 15px;
   line-height: 21px;
-  max-width: 1293px;
-  display: block;
+  display: grid;
 }
 
 .containerInput {  
@@ -88,6 +96,7 @@
   font-size: 15px;
   grid-template-columns: 48px 522px;
   grid-template-rows: 21px 19px 38px;
+  padding: 24px 24px 16px 24px;
   gap: 0px 0px;
   grid-auto-flow: row;
   grid-template-areas:
@@ -110,7 +119,8 @@
 .inputThread { grid-area: inputThread; }
 .inputThread > input { 
   background-color: transparent !important;
-  border: none; 
+  border: none;
+  outline: none; 
 }
 
 .galleryIcon { grid-area: galleryIcon; }
